--- a/samm/src/main/resources/templates/map.html
+++ b/samm/src/main/resources/templates/map.html
@@ -195,18 +195,18 @@
 			<!-- Modal content-->
 			<div class="modal-content">
 				<div class="modal-header  modal-title2">
-					<button type="button" class="close" data-dismiss="modal">&times;</button>
+					<button type="button" class="close" style="position: absolute; right: 16px; top: 16px;" data-dismiss="modal">&times;</button>
 					<h4 class="modal-title">Share Festival</h4>
 				</div>
 				<div class="modal-body mbody1">
-					<a onClick="shareTwitter()"><i class="bi bi-twitter share-icon-i"></i> <span
-							class="icon-text">Twitter</span></a>
-					<a onClick="shareFacebook()"><i class="bi bi-facebook share-icon-i"></i> <span
-							class="icon-text">Facebook</span></a>
-					<a onClick="shareKakao()"> <img
-							src="https://developers.kakao.com/assets/img/about/logos/kakaotalksharing/kakaotalk_sharing_btn_medium.png"
-							alt="카카오톡 공유 보내기 버튼" class="share-icon-i" style="width: 50px;" /><span
-							class="icon-text">Kakao</span>
+					<a class="share-icon twitter" onClick="shareTwitter()"><i
+						class="bi bi-twitter share-icon-i"></i> <span class="icon-text">Twitter</span></a>
+					<a class="share-icon facebook" onClick="shareFacebook()"><i
+						class="bi bi-facebook share-icon-i"></i> <span class="icon-text">Facebook</span></a>
+					<a class="share-icon kakao" onClick="shareKakao()"> <img
+						src="https://developers.kakao.com/assets/img/about/logos/kakaotalksharing/kakaotalk_sharing_btn_medium.png"
+						alt="카카오톡 공유 보내기 버튼" class="share-icon-i" style="width: 50px;" /><span
+						class="icon-text">Kakao</span>
 					</a>
 				</div>
 				<div class="modal-footer">
