--- a/samm/src/main/resources/templates/board/write.html
+++ b/samm/src/main/resources/templates/board/write.html
@@ -15,7 +15,7 @@
 
 
 <section class="hero-wrap hero-wrap-2 js-fullheight"
-	style="background-image: url('images/festival6.jpg');">
+	style="background-image: url('/images/festival9.jpg');">
 	<div class="overlay"></div>
 	<div class="container">
 		<div
