--- a/samm/src/main/resources/templates/index.html
+++ b/samm/src/main/resources/templates/index.html
@@ -55,7 +55,7 @@
 					<li class="nav-item active"><a href="/" class="nav-link">Home</a></li>
 					<li class="nav-item active"><a href="/about" class="nav-link">About</a></li>
 					<li class="nav-item active"><a href="/map" class="nav-link">FestivalMap</a></li>
-					<li class="nav-item active"><a href="/board" class="nav-link">Board</a></li>
+					<li class="nav-item active"><a href="/board" class="nav-link">Blog</a></li>
 					
 					<li class="nav-item active " th:if="${session.loginuser == null && session.loginadmin == null}">
 						<a href="/login"  class="nav-link">Sign In</a>
