board review delete 수정

--- a/samm/src/main/resources/static/css/board.css
+++ b/samm/src/main/resources/static/css/board.css
@@ -8,3 +8,10 @@
 .commentdiv{
 	border-top: 1px solid gray;
 }
+
+.row{
+	justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+}
