--- a/samm/src/main/resources/static/css/board.css
+++ b/samm/src/main/resources/static/css/board.css
@@ -7,11 +7,49 @@
 
 .commentdiv{
 	border-top: 1px solid gray;
+    width: 70vw;
+    display: flex;
+    flex-direction: column;
 }
 
 .row{
-	justify-content: center;
-    align-items: center;
-    text-align: center;
+    display: flex;
     width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+#titleform{
+	border-top: 3px solid gray;
+	margin-bottom: 40px;
+	padding-top: 30px;
+	margin-top: 100px;
+	/* text-align: center; */
+}
+
+.boardSubject{
+	text-align: center;
+	margin-bottom: 50px !important;
+	font-weight: bold;
+}
+
+.tagcloud{
+	display: flex;
+	justify-content: space-between;
+	margin: 30px 0;
+	
+}
+
+
+
+#cpost{
+	padding: 20px !important;
+}
+
+#comment{
+	height: 120px !important;
+}
+.commentcnt{
+	padding-bottom: 10px;
+	border-bottom: 0.5px solid gray;
 }
