--- a/samm/src/main/resources/templates/board/revise.html
+++ b/samm/src/main/resources/templates/board/revise.html
@@ -1,11 +1,10 @@
 <meta charset="utf-8">
 
 <script th:inline="javascript">
-
-
 $(document).ready(function() {
 	let content = [[${boardvo.content}]];
 	$('.note-editable').html(content);
+	
 	$('#register').click(function(){
 		 if($('input[name="title"]').val()==""){
 			alert("제목 입력해주세요.");
@@ -27,18 +26,7 @@ $(document).ready(function() {
 	
 });
 
-
-
-	
-	
 </script>
-
-<link
-	href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
-	rel="stylesheet">
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<script
-	src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
 <!-- include summernote css/js -->
 <link
@@ -51,7 +39,7 @@ $(document).ready(function() {
 <script src="/js/summernote/lang/summernote-ko-KR.js"></script>
 
 <link rel="stylesheet" href="/css/summernote/summernote-lite.css">
-
+<link rel="stylesheet" href="/css/board.css">
 
 <section class="hero-wrap hero-wrap-2 js-fullheight"
 	style="background-image: url('/images/festival6.jpg');">
@@ -61,49 +49,72 @@ $(document).ready(function() {
 			class="row no-gutters slider-text js-fullheight align-items-end justify-content-center">
 			<div class="col-md-9 ftco-animate pb-5 text-center">
 				<p class="breadcrumbs">
-					<span class="mr-2"><a href="index.html">Home <i
-							class="fa fa-chevron-right"></i></a></span> <span>Board <i
+					<span class="mr-2"><a href="/">Home <i
+							class="fa fa-chevron-right"></i></a></span> <span>Blog <i
 						class="fa fa-chevron-right"></i></span>
 				</p>
-				<h1 class="mb-0 bread">Board</h1>
+				<h1 class="mb-0 bread">Blog Revise</h1>
 			</div>
 		</div>
 	</div>
 </section>
 
-
-
-<form id="post">
-	<div class="form-group">
-
-		제목: <span id="title"></span><input type="text"
-			class="form-control form-control-user" name="title"
-			th:value="${boardvo.title}">
-
-
-		<textarea id="summernote" name="content" th:value="${boardvo.content}"></textarea>
-		<input th:if="${session.loginuser} != null" name="writerid"
-			th:value="${session.loginuser.id}" hidden id="writerid">
-		<input th:value="${boardvo.bno}" hidden name="bno"> 
+<div class="container">
+	<div class="pt-5 mt-5">	
+		<form id="post">
+			<div class="form-group">
+				<input type="text" placeholder="이곳에 제목을 엽력 하세요." th:value="${boardvo.title}"
+					class="form-control form-control-user write-title" name="title" id="title">
+					
+				<textarea id="summernote" name="content"></textarea>
+						
+				<input th:if="${session.loginuser} != null" name="writerid"
+					th:value="${session.loginuser.id}" hidden id="writerid">
+				<input th:value="${boardvo.bno}" hidden name="bno"> 
+			</div>
+		</form>
+	
 	</div>
-</form>
+	<a id="register" href="#" class="btn btn-primary btn-user btn-block">REGISTER</a>
+</div>
 
-<a id="register" href="#" class="btn btn-primary btn-user btn-block">REGISTER</a>
+
 <script>
-//서머노트에 text 쓰기
-$('#summernote').summernote('insertText');
+$('#summernote').summernote({
+	height : 750, // 에디터 높이
+	minHeight : null, // 최소 높이
+	maxHeight : null, // 최대 높이
+	focus : true, // 에디터 로딩후 포커스를 맞출지 여부
+	lang : "ko-KR", // 한글 설정
+	callbacks : { //여기 부분이 이미지를 첨부하는 부분
+		onImageUpload : function(files) {
+			uploadSummernoteImageFile(files[0], this);
+			/* for (var i = files.length - 1; i >= 0; i--) {
+			uploadSummernoteImageFile(files[i],
+			this); 
+			}*/
+		}
+	}
 
-// 서머노트 쓰기 비활성화
-$('#summernote').summernote('disable');
+});
 
-// 서머노트 쓰기 활성화
-$('#summernote').summernote('enable');
-
-// 서머노트 리셋
-$('#summernote').summernote('reset');
-
-// 마지막으로 한 행동 취소 ( 뒤로가기 )
-$('#summernote').summernote('undo');
-// 앞으로가기
-$('#summernote').summernote('redo');
+function uploadSummernoteImageFile(file, editor) {
+	data = new FormData();
+	data.append("file", file);
+	console.log(data);
+	console.log(file);
+	$.ajax({
+		data : data,
+		type : "post",
+		url : "/uploadSummernoteImageFile",
+		contentType : false,
+		enctype : 'multipart/form-data',
+		processData : false,
+		success : function(data) {
+			//항상 업로드된 파일의 url이 있어야 한다.
+			$('.note-editable').append('<img src='+data.url+' style="width:50%;" >' + '<p> </p>');
+			console.log("contents::"+$('textarea[name="content"]').val())
+		}
+	});
+};
 </script>
