--- a/samm/src/main/resources/templates/board/write.html
+++ b/samm/src/main/resources/templates/board/write.html
@@ -12,7 +12,7 @@
 <script src="/js/summernote/lang/summernote-ko-KR.js"></script>
 
 <link rel="stylesheet" href="/css/summernote/summernote-lite.css">
-
+<link rel="stylesheet" href="/css/board.css">
 
 <section class="hero-wrap hero-wrap-2 js-fullheight"
 	style="background-image: url('/images/festival9.jpg');">
@@ -23,10 +23,10 @@
 			<div class="col-md-9 ftco-animate pb-5 text-center">
 				<p class="breadcrumbs">
 					<span class="mr-2"><a href="/">Home <i
-							class="fa fa-chevron-right"></i></a></span> <span>Board <i
+							class="fa fa-chevron-right"></i></a></span> <span>Blog <i
 						class="fa fa-chevron-right"></i></span>
 				</p>
-				<h1 class="mb-0 bread">Board</h1>
+				<h1 class="mb-0 bread">Bloig Write</h1>
 			</div>
 		</div>
 	</div>
@@ -34,17 +34,21 @@
 
 
 <div class="container">
-	<form id="post">
-		<div class="form-group">
-			제목: <span id="title"></span><input type="text"
-				class="form-control form-control-user" name="title">
-			<textarea id="summernote" name="content"></textarea>
-			<input th:if="${session.loginuser} != null" name="writerid"
-				th:value="${session.loginuser.id}" hidden id="writerid">
-		</div>
-	</form>
-	<a id="register" href="#" class="btn btn-primary btn-user btn-block"
-		onClick="boardRegister()">REGISTER</a>
+	<div class="pt-5 mt-5">	
+		<form id="post">
+			<div class="form-group">
+				<input type="text" placeholder="이곳에 제목을 엽력 하세요."
+					class="form-control form-control-user write-title" name="title" id="title">
+					
+				<textarea id="summernote" name="content"></textarea>
+				
+				<input th:if="${session.loginuser} != null" name="writerid"
+					th:value="${session.loginuser.id}" hidden id="writerid">
+			</div>
+		</form>
+		<a id="register" href="#" class="btn btn-primary btn-user btn-block"
+			onClick="boardRegister()">REGISTER</a>
+	</div>
 </div>
 <script>
 	function uploadSummernoteImageFile(file, editor) {
@@ -86,12 +90,11 @@
 		$('#post').submit();
 	}
 	$('#summernote').summernote({
-		height : 300, // 에디터 높이
+		height : 750, // 에디터 높이
 		minHeight : null, // 최소 높이
 		maxHeight : null, // 최대 높이
 		focus : true, // 에디터 로딩후 포커스를 맞출지 여부
 		lang : "ko-KR", // 한글 설정
-		placeholder : '최대 2048자까지 쓸 수 있습니다', //placeholder 설정
 		callbacks : { //여기 부분이 이미지를 첨부하는 부분
 			onImageUpload : function(files) {
 				uploadSummernoteImageFile(files[0], this);
