--- a/samm/src/main/resources/templates/center.html
+++ b/samm/src/main/resources/templates/center.html
@@ -10,8 +10,8 @@
 			data-scrollax-parent="true">
 			<div class="col-md-7 ftco-animate">
 				<span class="subheading">SAMM FINAL PROJECT</span>
-				<h1 class="mb-4">Search Festival & Enjoy Festival</h1>
-				<p class="caps"><a href="/searchfestival">Go Serach Festival</a></p>
+				<h1 class="mb-4">Search Festival & Share Festival</h1>
+				<p class="caps"><a class="d-flex goLink" href="/searchfestival">Go Serach Festival</a></p>
 			</div>
 			
 		</div>
