축제 진행여부에따른 검색결과 색 변화

--- a/samm/src/main/resources/static/css/festival.css
+++ b/samm/src/main/resources/static/css/festival.css
@@ -809,3 +809,10 @@
 	color: #fd7e14;
 }
 
+.endParty{
+    background-color: darkgrey !important;
+}
+
+.incommingParty{
+	background-color: crimson !important;
+}
